samples/_failures_safe/1761549191_964326_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5cdbb4fa.c: In function ‘main’:
./samples/SAFE/__tmp_5cdbb4fa.c:156:5: error: expected expression at end of input
  156 |     char input[
      |     ^~~~
./samples/SAFE/__tmp_5cdbb4fa.c:156:5: error: expected declaration or statement at end of input
